# modAI-chat

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .tokeignore  AGENTS.md  CONTRIBUTION.md  LICENSE  README.md  ROADMAP.md  justfile  skills-lock.json
backend/: .env.sample  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
backend/architecture/: auth.md  chat.md  core.md  persistence.md
backend/docs/architecture/: auth.md  chat.md  core.md  persistence.md  tools.md
backend/omni/: .env.sample  .gitignore  .pre-commit-config.yaml  .uvrc  CHANGELOG.md  Dockerfile  README.md  config-simple-dev.yaml  config.sample.yaml  config.yaml  justfile  pyproject.toml
backend/omni/docs/: EXTERNAL-MODULE-DEVELOPMENT.md  identity-provider-evaluation.md
backend/omni/docs/architecture/: auth.md  core.md  tools.md
backend/omni/docs/learnings/: INSTRUCTION_UPDATES.md
backend/omni/src/modai/: default_config.mermaid  default_config.yaml  main.py  module_loader.py
backend/omni/src/modai/__tests__/: test_module_loader.py
backend/src/modai/: default_config.yaml  main.py  module.py  module_loader.py  openapi_models.py
backend/src/modai/modules/authentication/: module.py  password_authentication_module.py  username_password_authentication_module.py
backend/src/modai/modules/chat/: module.py  opean_ai_chat_module.py  openai_agent_chat.py  openai_llm_chat.py  openai_raw_chat.py  web_chat_router.py
backend/src/modai/modules/health/: module.py
backend/src/modai/modules/llm_provider/: __init__.py  module.py  openai_provider.py
backend/src/modai/modules/llm_provider_store/: __init__.py  module.py  sql_model_llm_provider_store.py
backend/tests/: abstract_llm_provider_store_test.py  abstract_model_provider_store_test.py  abstract_user_store_test.py  test_authentication.py  test_central_model_provider_router.py  test_chat.py  test_config_loader.py  test_health.py  test_inmemory_user_store.py  test_llm_provider.py  test_model_provider.py  test_module_loader.py  test_session.py  test_sql_model_llm_provider_store.py  test_sql_model_provider_store.py  test_sql_model_user_store.py  test_user.py  test_user_settings.py  test_user_settings_store.py
backend/tools/dice-roller/: .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml
docs/: .gitignore  (+11 more)
(+979 files in other folders)
