[project]
name = "modai-backend"
version = "0.1.0"
description = "ModAI Chat Backend"
requires-python = ">=3.13"
dependencies = [
    "uvicorn",
    "fastapi",
    "pydantic",
    "pyyaml",
    "openai",
    "pyjwt",
    "python-dotenv",
    "sqlalchemy",
]

[dependency-groups]
dev = [
    "datamodel-code-generator[ruff]",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
package = true
